# schunk_kinematics

./: CMakeLists.txt  CMakeLists.txt~  package.xml
include/schunk_kinematics/: arm_kinematics.h  arm_navigation.h  sdh_navigation.h
sh/: simple_motion.sh  simple_motion.sh~
src/: arm_kinematics.cpp  arm_navigation.cpp  grasp_demo.cpp  sdh_navigation.cpp  simple_motion.cpp  simple_motion.cpp~
